--- a/public/views/LoginView.html
+++ b/public/views/LoginView.html
@@ -39,15 +39,15 @@
                                 
                             </ul>
                         </div>
+                        
                         <p>Connect with Facebook to get started.</p>
 
-                        <ul class="masthead-links">
-                            <li>
-                                <button ng-click="login()" ng-hide="isLoggedIn" class="btn btn-info btn-lg btn-login">
-                                    <i class="fa fa-facebook-square fa-lg"></i> Connect
-                              </button>
-                          </li>
-                        </ul>
+                        <div class="masthead-links">
+                            <button ng-click="login()" ng-hide="isLoggedIn" class="btn btn-info btn-lg btn-login">
+                                <i class="fa fa-facebook-square fa-lg"></i> Connect
+                            </button>
+                        </div>
+
                         <a href="http://www.apple.com/osx/apps/app-store.html" target="_blank" class="appstore">Download App</a>
 
                         <div class="social-icons sicon-white bordered">
